add services page

--- a/services.html
+++ b/services.html
@@ -26,9 +26,87 @@
     </div>
   </nav>
 
-  <section id='main-content'>
+  <section id='main-content' class="servicesPage">
     <div class="main__content">
-
+      <h1>Services</h1>
+      <p>A & P Specialties is Portland’s source for quality auto repair and first class service. We have been in business for over 30 years and our experienced auto technicians will handle any of your automotive needs. We specialize in German automobile repair, service and tuning of Audi, Porsche, and Volkswagen. We backup our work with a 36 month / 36,000 mile warranty.</p>
+      <div class="listAndImage">
+        <div class="listAndImage__listBox">
+          <ul>
+            <li>Brakes</li>
+            <li>Diagnostics</li>
+            <li>Emissions</li>
+            <li>Engine Repair</li>
+            <li>Fuel System Service</li>
+            <li>Heating & Cooling</li>
+            <li>Hose & Filter Replacement</li>
+            <li>Muffler/Exhaust</li>
+            <li>Oil Changes</li>
+            <li>Preventative Maintenance</li>
+            <li>Radiators</li>
+            <li>Suspension</li>
+            <li>Timing Belt Replacement</li>
+            <li>Tires</li>
+            <li>Tune Up</li>
+            <li>Transmissions</li>
+            <li>Wheel Alignment</li>
+            <li>And So Much More</li>
+          </ul>
+        </div>
+        <div class="listAndImage__imageBox">
+          <img src="images/services/porsche-service.jpg" alt="">
+        </div>
+      </div>
+      <p>Call <a href="tel:503-254-7310">503-254-7310</a> or stop in today - 707 SE 82nd Ave, Portland, OR 97216</p>
+      <p>Open 7:30 am - 5:30 pm, Monday - Friday</p>
+      <p>We work on a variety of both late and early model Porsche's, Audi's, and Volkswagen's. From tune-ups and scheduled maintenance, to complete rebuilds - A&P Specialties has you covered.</p>
+      <div class="imagesColumn">
+        <div class="imagesColumn__box">
+          <img src="images/services/Porsche-maintenance.jpg" alt="">
+          <p>Porsche diagnostics, scheduled maintenance,
+          and complete repair</p>
+        </div>
+        <div class="imagesColumn__box">
+          <img src="images/services/Audi-maintenance-repair.jpg" alt="">
+          <p>Audi diagnostics, scheduled maintenance,
+          and complete repair</p>
+        </div>
+        <div class="imagesColumn__box">
+          <img src="images/services/Volkswagen-repair-and-service.jpg" alt="">
+          <p>We service all types of Volkswagens...</p>
+        </div>
+        <div class="imagesColumn__box">
+          <img src="images/services/vw-service.jpg" alt="">
+          <p>...from the Beetle to the Bus, and everything inbetween - Bug, Jetta, Golf, Passat, and more</p>
+        </div>
+        <div class="imagesColumn__box">
+          <img src="images/services/1976-911S-ready-for-Pebble-Beach-concourse.jpg" alt="">
+          <p>Mike giving Alan a big thank you hug, before setting off on his road trip the Pebble Beach concourse. His 1976 911S ran flawlessly thanks to Alan's touch.</p>
+        </div>
+        <div class="imagesColumn__box">
+          <img src="images/services/porsche-914-service.jpg" alt="">
+          <p>We service all years and types of Porsches</p>
+        </div>
+        <div class="imagesColumn__box">
+          <img src="images/services/porsche-turbo-service.jpg" alt="">
+          <p>High Performance Porsche Service</p>
+        </div>
+        <div class="imagesColumn__box">
+          <img src="images/services/Porsche-928-specialist.jpg" alt="">
+          <p>	356, 911, 914, 928, 944, Boxster, Cayman... if it's a Porsche, we're your mechanic & technician</p>
+        </div>
+        <div class="imagesColumn__box full">
+          <img src="images/services/Porsche-Cayenne-service-in-Portland.jpg" alt="">
+          <p>A&P Specialties is an ASE and RepairPal Certified shop featuring an experienced and well trained team who are equipped with the state of the art tools and diagnostic equipment necessary for today's modern vehicles. 3 year / 36,000 mile warranty</p>
+        </div>
+        <div class="imagesColumn__box full">
+          <img src="images/services/Modern-Porsche-maintenance.jpg" alt="">
+        </div>
+        <div class="imagesColumn__box full">
+          <h3>A&P Specialties is an Authorized Bosch Service Center</h3>
+          <img src="images/services/Porsche-and-VW-repair-service.jpg" alt="">
+        </div>
+      </div>
     </div>
 
     <div class="second__content">
