add navbar for all pages

--- a/about.html
+++ b/about.html
@@ -26,6 +26,17 @@
     </div>
   </nav>
 
+  <nav id="navBar">
+    <ul>
+      <a href="index.html"><li>Home</li></a>
+      <a href="services.html"><li>Services</li></a>
+      <a href="about.html"><li>About Us</li></a>
+      <a href="locations.html"><li>Locations</li></a>
+      <a href="appointment.html"><li>Schedule Appointment</li></a>
+      <a href="contact.html"><li>Contact Us</li></a>
+    </ul>
+  </nav>
+
   <section id='main-content' class="aboutPage">
     <div class="main__content">
       <h2>About Us</h2>
