make navbar responsive but no animation yet, add locations page but not google maps yet

--- a/locations.html
+++ b/locations.html
@@ -28,6 +28,7 @@
 
   <nav id="navBar">
     <ul>
+      <a id="menuToggle"><li>Menu</li></a>
       <a href="index.html"><li>Home</li></a>
       <a href="services.html"><li>Services</li></a>
       <a href="about.html"><li>About Us</li></a>
@@ -37,9 +38,33 @@
     </ul>
   </nav>
 
-  <section id='main-content'>
+  <section id='main-content' class="locationsPage">
     <div class="main__content">
+      <h2>Locations</h2>
+      <h3>A&P Specialties - Specializing in Audi, Porsche, and Volkswagen service & repair in the greater Portland metro area, and Vancouver, Washington.</h3>
+      <p>We are located at 707 SE 82d Avenue, Portland, Oregon 97216. Near Stark Street, close to the I-84 and I-205 freeways.</p>
 
+      <p>Visit us today and experience our exceptional customer service. It’s our goal at A & P Specialties to always provide great service and high-quality workmanship at a fair price. Our friendly staff is waiting to help you with your next automotive repair needs.</p>
+      <div class="imageDirections">
+        <div class="imageDirections__box">
+          <img src="images/services/AandP-Specialties-sign.jpg" alt="">
+          <p>Sign as seen from 82nd & Alder</p>
+        </div>
+        <div class="imageDirections__box">
+          <img src="images/services/Porsche-911-wall-painting.jpg" alt="">
+          <p>Original Porsche wall painting</p>
+        </div>
+        <div class="imageDirections__box">
+          <img src="images/services/A-and-P-office-entrance.jpg" alt="">
+          <p>Office entrance in back</p>
+        </div>
+      </div>
+      <div class="main__content__callThisNumber">
+        <h2>Call 503-254-7310
+        or stop in today!</h2>
+        <h4>707 SE 82nd Ave.
+        Portland, OR 97216</h4>
+      </div>
     </div>
 
     <div class="second__content">
