--- a/locations.html
+++ b/locations.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/master.css">
     <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -43,6 +44,8 @@
       <h2>Locations</h2>
       <h3>A&P Specialties - Specializing in Audi, Porsche, and Volkswagen service & repair in the greater Portland metro area, and Vancouver, Washington.</h3>
       <p>We are located at 707 SE 82d Avenue, Portland, Oregon 97216. Near Stark Street, close to the I-84 and I-205 freeways.</p>
+
+      <iframe frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?ie=UTF8&cid=7969622967914643456&q=A+%26+P+Specialties&gl=US&hl=en&ll=45.517539,-122.579506&spn=0.006295,0.006295&t=m&iwloc=A&output=embed"></iframe>
 
       <p>Visit us today and experience our exceptional customer service. It’s our goal at A & P Specialties to always provide great service and high-quality workmanship at a fair price. Our friendly staff is waiting to help you with your next automotive repair needs.</p>
       <div class="imageDirections">
