add appointment and contact pages with form that opens pre-populated email when submited

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         </a>
       </div>
       <div class='half-nav-content'>
-        <h1>VW Repair</h1>
+        <h1>Auto Repair</h1>
         <hr>
         <h1><a href='tel:503-254-7310'>503 254-7310</a></h1>
       </div>
