--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/master.css">
     <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -19,7 +20,7 @@
         </a>
       </div>
       <div class='half-nav-content'>
-        <h1>VW Repair</h1>
+        <h1>Auto Repair</h1>
         <hr>
         <h1><a href='tel:503-254-7310'>503 254-7310</a></h1>
       </div>
@@ -38,9 +39,62 @@
     </ul>
   </nav>
 
-  <section id='main-content'>
+  <section id='main-content' class="contactPage">
     <div class="main__content">
+      <h2>REQUEST APPOINTMENT FOR SERVICE</h2>
+      <p>Call <a href="tel:1-503-254-7310">503-254-7310</a>, or complete the form below to email us.</p>
+      <h4>Open 7:30 am - 5:30 pm, Monday - Friday</h4>
 
+      <h2 class="formLabel">Fill out Form Below:</h2>
+
+      <form class="" action="mailto:info@aandpspecialties@gmail.com" method="post" enctype="text/plain">
+        <div class="formBox">
+          <label for="">Your Name</label>
+          <input type="text" name="name" value="">
+        </div>
+
+        <div class="formBox">
+          <label for="">Email Address</label>
+          <input type="text" name="email address" value="">
+        </div>
+
+        <div class="formBox">
+          <label for="">Phone</label>
+          <input type="text" name="phone number" value="">
+        </div>
+
+        <div class="formBox">
+          <label for="">Address</label>
+          <input type="text" name="address" value="">
+        </div>
+
+        <div class="formBox">
+          <label for="">City, State, Zip</label>
+          <input type="text" name="city state zip" value="">
+        </div>
+
+        <div class="formBox">
+          <label for="">Prefered Method</label>
+          <div class="radioBox">
+            <input type="radio" name="contact" value="phone">
+            <label for="">Phone</label>
+            <input type="radio" name="contact" value="email">
+            <label for="">Email</label>
+          </div>
+        </div>
+
+        <div class="formBox">
+          <label for="">Year and Model of Vehicle</label>
+          <input type="text" name="year and model" value="">
+        </div>
+
+        <div class="formBox">
+          <label for="">Comment or Appointment Request</label>
+          <textarea type="text" name="comments" value=""></textarea>
+        </div>
+
+        <button type="Submit" value="Send">Send Email</button>
+      </form>
     </div>
 
     <div class="second__content">
