--- a/locations.html
+++ b/locations.html
@@ -20,7 +20,7 @@
         </a>
       </div>
       <div class='half-nav-content'>
-        <h1>VW Repair</h1>
+        <h1>Auto Repair</h1>
         <hr>
         <h1><a href='tel:503-254-7310'>503 254-7310</a></h1>
       </div>
@@ -63,7 +63,7 @@
         </div>
       </div>
       <div class="main__content__callThisNumber">
-        <h2>Call 503-254-7310
+        <h2>Call <a href="tel:1-503-254-7310">503-254-7310</a>
         or stop in today!</h2>
         <h4>707 SE 82nd Ave.
         Portland, OR 97216</h4>
