--- a/services.html
+++ b/services.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="css/master.css">
     <script
   src="https://code.jquery.com/jquery-3.2.1.min.js"
@@ -19,7 +20,7 @@
         </a>
       </div>
       <div class='half-nav-content'>
-        <h1>VW Repair</h1>
+        <h1>Auto Repair</h1>
         <hr>
         <h1><a href='tel:503-254-7310'>503 254-7310</a></h1>
       </div>
