make directions text font-weight of bold on locations page

--- a/about.html
+++ b/about.html
@@ -29,7 +29,7 @@
 
   <nav id="navBar">
     <ul>
-      <<a id="menuToggle"><li>Menu</li></a>
+      <a id="menuToggle"><li>Menu</li></a>
       <a href="index.html"><li>Home</li></a>
       <a href="services.html"><li>Services</li></a>
       <a href="about.html"><li>About Us</li></a>
