make list of services on services page easier to distinguish between on mobile

--- a/appointment.html
+++ b/appointment.html
@@ -45,9 +45,9 @@
       <p>Call <a href="tel:1-503-254-7310">503-254-7310</a>, or complete the form below to email us.</p>
       <p>We service the following vehicles:</p>
       <ul>
-        <a href="#"><li>Audi</li></a>
-        <a href="#"><li>Porsche</li></a>
-        <a href="#"><li>Volkswagen</li></a>
+        <a href="audi-service-and-repair.html"><li>Audi</li></a>
+        <a href="porsche-service-and-repair.html"><li>Porsche</li></a>
+        <a href="volkswagen-service-and-repair.html"><li>Volkswagen</li></a>
       </ul>
 
       <h2 class="formLabel">Fill out Form Below:</h2>
