add specific car type pages

--- a/porsche-service-and-repair.html
+++ b/porsche-service-and-repair.html
@@ -39,9 +39,62 @@
     </ul>
   </nav>
 
-  <section id='main-content'>
+  <section id='main-content' class="porschePage">
     <div class="main__content">
-
+      <h1>Services</h1>
+      <div class="topBox">
+        <p>A & P Specialties is Portland’s source for quality auto repair and first class service for Porsche owners. We have been in business for over 27 years and our experienced auto technicians will handle any of your automotive needs. We specialize in Porsche automobile repair, service and tuning.</p>
+        <img src="images/porsche.jpg" alt="">
+      </div>
+      <div class="listAndImage">
+        <div class="listAndImage__listBox">
+          <ul>
+            <li>Brakes</li>
+            <li>Diagnostics</li>
+            <li>Emissions</li>
+            <li>Engine Repair</li>
+            <li>Fuel System Service</li>
+            <li>Heating & Cooling</li>
+            <li>Hose & Filter Replacement</li>
+            <li>Muffler/Exhaust</li>
+            <li>Oil Changes</li>
+            <li>Preventative Maintenance</li>
+            <li>Radiators</li>
+            <li>Suspension</li>
+            <li>Timing Belt Replacement</li>
+            <li>Tires</li>
+            <li>Tune Up</li>
+            <li>Transmissions</li>
+            <li>Wheel Alignment</li>
+            <li>And So Much More</li>
+          </ul>
+        </div>
+        <div class="listAndImage__imageBox">
+          <img src="images/services/Porsche-repair.jpg" alt="">
+        </div>
+      </div>
+      <div class="imageAndText">
+        <div class="imageAndText__imageBox">
+          <img src="images/services/porsche-service.jpg" alt="">
+        </div>
+        <div class="imageAndText__textBox">
+          <p>Call <a href="tel:1-503-254-7310">503-254-7310</a> or stop in today -
+          707 SE 82nd Ave, Portland, OR 97216</p>
+          <p>Open 7:30 am - 5:30 pm, Monday - Friday</p>
+          <p>We work on a variety of both late and early model Porsche's (911, 914, 928, 944, 968, 996, Boxster, Cayman, Cayenne and more). From tune-ups and scheduled Porsche maintenance, to complete rebuilds - A&P Specialties has you covered.</p>
+        </div>
+      </div>
+      <h3>A sunny afternoon at A&P Specialities</h3>
+      <img src="images/services/2015-shop-photo-Porsche.jpg" alt="">
+      <img src="images/services/2015-shop-photo-classic-Porsche.jpg" alt="">
+      <img src="images/services/Porsche-928-specialist.jpg" alt="">
+      <h3>Our expert technicians and sophisticated diagnostic equipment
+      is necessary for today's modern Porsche</h3>
+      <img src="images/services/Porsche-Cayenne-service-in-Portland.jpg" alt="">
+      <img src="images/services/Porsche-technician-Portland.jpg" alt="">
+      <h3>A typical morning at A&P Specialties
+      Start your day out right with Porsche Power!</h3>
+      <img src="images/services/Porsche-power.jpg" alt="">
     </div>
 
     <div class="second__content">
