--- a/volkswagen-service-and-repair.html
+++ b/volkswagen-service-and-repair.html
@@ -39,9 +39,51 @@
     </ul>
   </nav>
 
-  <section id='main-content'>
+  <section id='main-content' class="vwPage">
     <div class="main__content">
-
+      <h1>Services</h1>
+      <div class="topBox">
+        <p>A & P Specialties is Portland’s source for quality auto repair and first class service. We have been in business for over 30 years and our experienced auto technicians will handle any of your automotive needs. We specialize in German automobile repair, service and tuning of Audi, Porsche, and Volkswagen. We backup our work with a 36 month / 36,000 mile warranty.</p>
+        <img src="images/volkswagen.jpg" alt="">
+      </div>
+      <div class="listAndImage">
+        <div class="listAndImage__listBox">
+          <ul>
+            <li>Brakes</li>
+            <li>Diagnostics</li>
+            <li>Emissions</li>
+            <li>Engine Repair</li>
+            <li>Fuel System Service</li>
+            <li>Heating & Cooling</li>
+            <li>Hose & Filter Replacement</li>
+            <li>Muffler/Exhaust</li>
+            <li>Oil Changes</li>
+            <li>Preventative Maintenance</li>
+            <li>Radiators</li>
+            <li>Suspension</li>
+            <li>Timing Belt Replacement</li>
+            <li>Tires</li>
+            <li>Tune Up</li>
+            <li>Transmissions</li>
+            <li>Wheel Alignment</li>
+            <li>And So Much More</li>
+          </ul>
+        </div>
+        <div class="listAndImage__imageBox">
+          <img src="images/services/Volkswagen-repair-and-service.jpg" alt="">
+        </div>
+      </div>
+      <div class="imageAndText">
+        <div class="imageAndText__imageBox">
+          <img src="images/services/vw-service.jpg" alt="">
+        </div>
+        <div class="imageAndText__textBox">
+          <p>Call <a href="tel:1-503-254-7310">503-254-7310</a> or stop in today -
+          707 SE 82nd Ave, Portland, OR 97216</p>
+          <p>Open 7:30 am - 5:30 pm, Monday - Friday</p>
+          <p>We work on a variety of both late and early model Volkswagen's. From tune-ups and scheduled maintenance, to complete rebuilds - A&P Specialties has you covered.</p>
+        </div>
+      </div>
     </div>
 
     <div class="second__content">
