fix main page with updated content

--- a/index.html
+++ b/index.html
@@ -27,80 +27,103 @@
     </div>
   </nav>
 
-  <nav id="navBar">
-    <ul>
-      <a id="menuToggle"><li>Menu</li></a>
-      <a href="index.html"><li>Home</li></a>
-      <a href="services.html"><li>Services</li></a>
-      <a href="about.html"><li>About Us</li></a>
-      <a href="locations.html"><li>Locations</li></a>
-      <a href="appointment.html"><li>Schedule Appointment</li></a>
-      <a href="contact.html"><li>Contact Us</li></a>
-    </ul>
-  </nav>
+  <div id="contentRounded">
 
-  <section id='main-content'>
-    <div class="main__content">
-      <h2>AUTOMOTIVE REPAIR & SERVICE</h2>
-      <h4>Audi, Porsche, and Volkswagen Service & Repair in Portland</h4>
-      <p>A & P Specialties is Portland’s source for quality auto repair and first class service, on European vehicles Audi, Porsche, and VW. We have been in business for over 30 years and our experienced auto technicians will handle any of your automotive needs including brake repair, engine repair, transmissions, tune-up, oil changes and more on both early and late model German cars. Our ASE Certified Technicians and RepairPal Certified shop is equipped with the state of the art tools and diagnostic equipment necessary for today's modern vehicles, and we back it up with a 36 month / 36,000 mile warranty.</p>
-      <div class="main__content__brandLogoBox">
-        <a href="audi-service-and-repair.html">
-          <img src="images/audi.jpg" alt="Audi logo">
-        </a>
-        <a href="porsche-service-and-repair.html">
-          <img src="images/porsche.jpg" alt="Porsche logo">
-        </a>
-        <a href="volkswagen-service-and-repair.html">
-          <img src="images/volkswagen.jpg" alt="Volkswagen logo">
-        </a>
-      </div>
-      <img src="images/AandP-Specialties-Office-Entrance-Porsche-Audi.jpg" alt="A and P Specialties Audi and Porche" class="fullImage">
-      <p class="centerText">learn about our highly experienced technicians <a href="about.html">here</a>!</p>
-      <div class="main__content__techniciansBox">
-        <img src="images/techs-031-Alan-tn.jpg" alt="Photo of A and P technician Alan">
-        <img src="images/techs-028-Paul-tn.jpg" alt="Photo of A and P technician Paul">
-        <img src="images/techs-016-Jose-tn.jpg" alt="Photo of A and P technician Jode">
-        <img src="images/techs-024-Phil-tn.jpg" alt="Photo of A and P technician Phil">
-        <img src="images/techs-021-Austin-tn.jpg" alt="Photo of A and P technician Austin">
-      </div>
-      <p>Visit us today and experience our exceptional customer service for owner's of German built cars.
-      It’s our goal at A & P Specialties to always provide great service and high-quality workmanship at a fair price.
-      Our friendly staff is waiting to help you with your automotive repair needs.</p>
-      <div class="main__content__reviewsBox">
-        <div class="main__content__callThisNumber">
-          <h2>Call 503-254-7310
-          or stop in today!</h2>
-          <h4>707 SE 82nd Ave.
-          Portland, OR 97216</h4>
-        </div>
-        <div class="main__content__reviewsBox__reviews">
+    <div id="slideShow">
+      <img src="images/slideshow/1.jpg" alt="Close up of Car">
+    </div>
 
-        </div>
-      </div>
-      <img src="images/Porsche-power.jpg" alt="Two Porsche Racing Cars" class="fullImage">
-      <p class="centerText">Open 7:30 am - 5:30 pm, Monday - Friday</p>
+    <nav id="navBar">
       <ul>
-        <a href="audi-service-and-repair.html"><li>Audi</li></a>
-        <a href="porsche-service-and-repair.html"><li>Porsche</li></a>
-        <a href="volkswagen-service-and-repair.html"><li>Volkswagen</li></a>
+        <a id="menuToggle"><li>Menu</li></a>
+        <a href="index.html"><li>Home</li></a>
+        <a href="services.html"><li>Services</li></a>
+        <a href="about.html"><li>About Us</li></a>
+        <a href="locations.html"><li>Locations</li></a>
+        <a href="appointment.html"><li>Schedule Appointment</li></a>
+        <a href="contact.html"><li>Contact Us</li></a>
       </ul>
-    </div>
+    </nav>
 
-    <div class="second__content">
-      <span class="toggleButton"></span>
-      <img src="images/logo.png" alt="A and P Logo">
-      <h5>707 SE 82nd Ave.</h5>
-      <h5>Portland, OR 97216</h5>
-      <h5 class="space"><a href="tel:503-254-7310">(503) 254-7310</a></h5>
-      <h5>Open 7:30 AM - 5:30 PM</h5>
-      <h5>Monday - Friday</h5>
-      <img src="images/ASE-Certified-and-Official-Bosch-Service-Center.gif" alt="">
-      <h4>36 Month/ 36,000 Mile Warrenty</h4>
-      <img src="images/repairpal.png" alt="repairpal logo">
-      <img src="images/business_badge2.png" alt="verified customer reviews badge">
-    </div>
-  </section>
+    <section id='main-content'>
+      <div class="main__content">
+        <h2>AUTOMOTIVE REPAIR & SERVICE</h2>
+        <h4>Audi, Porsche, and Volkswagen Service & Repair in Portland</h4>
+        <p>A & P Specialties is Portland’s source for quality auto repair and first class service, on European vehicles Audi, Porsche, and VW. We have been in business for over 30 years and our experienced auto technicians will handle any of your automotive needs including brake repair, engine repair, transmissions, tune-up, oil changes and more on both early and late model German cars. Our ASE Certified Technicians and RepairPal Certified shop is equipped with the state of the art tools and diagnostic equipment necessary for today's modern vehicles, and we back it up with a 36 month / 36,000 mile warranty.</p>
+        <div class="main__content__brandLogoBox">
+          <a href="audi-service-and-repair.html">
+            <img src="images/audi.jpg" alt="Audi logo">
+          </a>
+          <a href="porsche-service-and-repair.html">
+            <img src="images/porsche.jpg" alt="Porsche logo">
+          </a>
+          <a href="volkswagen-service-and-repair.html">
+            <img src="images/volkswagen.jpg" alt="Volkswagen logo">
+          </a>
+        </div>
+        <img src="images/AandP-Specialties-Office-Entrance-Porsche-Audi.jpg" alt="A and P Specialties Audi and Porche" class="fullImage">
+        <p class="centerText">learn about our highly experienced technicians <a href="about.html">here</a>!</p>
+        <div class="main__content__techniciansBox">
+          <img src="images/techs-031-Alan-tn.jpg" alt="Photo of A and P technician Alan">
+          <img src="images/techs-028-Paul-tn.jpg" alt="Photo of A and P technician Paul">
+          <img src="images/techs-016-Jose-tn.jpg" alt="Photo of A and P technician Jode">
+          <img src="images/techs-024-Phil-tn.jpg" alt="Photo of A and P technician Phil">
+          <img src="images/techs-021-Austin-tn.jpg" alt="Photo of A and P technician Austin">
+        </div>
+        <p>Visit us today and experience our exceptional customer service for owner's of German built cars.
+        It’s our goal at A & P Specialties to always provide great service and high-quality workmanship at a fair price.
+        Our friendly staff is waiting to help you with your automotive repair needs.</p>
+        <div class="main__content__reviewsBox">
+          <div class="main__content__callThisNumber">
+            <h2>Call 503-254-7310
+            or stop in today!</h2>
+            <h4>707 SE 82nd Ave.
+            Portland, OR 97216</h4>
+          </div>
+          <div class="main__content__reviewsBox__reviews">
+
+          </div>
+        </div>
+        <img src="images/Porsche-power.jpg" alt="Two Porsche Racing Cars" class="fullImage">
+        <p class="centerText">Open 7:30 am - 5:30 pm, Monday - Friday</p>
+        <ul>
+          <a href="audi-service-and-repair.html"><li>Audi</li></a>
+          <a href="porsche-service-and-repair.html"><li>Porsche</li></a>
+          <a href="volkswagen-service-and-repair.html"><li>Volkswagen</li></a>
+        </ul>
+      </div>
+
+      <div class="second__content">
+        <span class="toggleButton"></span>
+        <img src="images/logo.png" alt="A and P Logo">
+        <h5>707 SE 82nd Ave.</h5>
+        <h5>Portland, OR 97216</h5>
+        <h5 class="space"><a href="tel:503-254-7310">(503) 254-7310</a></h5>
+        <h5>Open 7:30 AM - 5:30 PM</h5>
+        <h5>Monday - Friday</h5>
+        <img src="images/ASE-Certified-and-Official-Bosch-Service-Center.gif" alt="">
+        <h4>36 Month/ 36,000 Mile Warrenty</h4>
+        <img src="images/repairpal.png" alt="repairpal logo">
+        <img src="images/business_badge2.png" alt="verified customer reviews badge">
+      </div>
+    </section>
+
+    <section id="subFooter">
+      <ul>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="services.html">Services</a></li>
+        <li><a href="about.html">About Us</a></li>
+        <li><a href="locations.html">Locations</a></li>
+        <li><a href="appointment.html">Schedule Appointment</a></li>
+        <li><a href="contact.html">Contact Us</a></li>
+      </ul>
+      <ul>
+        <li><a href="https://www.facebook.com/apspecialties">Facebook</a></li>
+        <li><a href="https://plus.google.com/112357903224511466291/about">Google+</a></li>
+        <li><a href="http://www.yelp.com/biz/a-and-p-specialties-portland">Yelp</a></li>
+      </ul>
+    </section>
+  </div>
 
   <footer id='footer'>
     <p>Servicing Audi, Volkswagen, Porsche, and BMW in Portland, Oregon | Automotive Repair &amp; Tuning</p>
